[package]
name = "stpc_test"
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Konstantin Gorshkov"]
license = "GPL-3.0-or-later"

[dependencies]
stpc_core = { path = "../stpc_core" }
stpc_crypto = { path = "../stpc_crypto" }
stpc_logging = { path = "../stpc_logging" }
stpc_time = { path = "../stpc_time" }
stpc_encoding = { path = "../stpc_encoding" }
stpc_certs = { path = "../stpc_certs" }
rand = "0.8"