[package]
name = "stpc_tool"
version = "0.1.0-alpha.0"
edition = "2024"
authors = ["Konstantin Gorshkov"]
license = "GPL-3.0-or-later"

[dependencies]
hex = "0.4.3"
ntp = "0.5.0"
stpc_certs = { path = "../stpc_certs" }
stpc_core = { path = "../stpc_core" }
stpc_crl = { path = "../stpc_crl" }
stpc_crypto = { path = "../stpc_crypto" }
stpc_encoding = { path = "../stpc_encoding" }
stpc_logging = { path = "../stpc_logging" }
stpc_ocsp = { path = "../stpc_ocsp" }
stpc_time = { path = "../stpc_time" }
